--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "build:prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -26,14 +30,20 @@
     "@angular-devkit/build-angular": "~13.2.2",
     "@angular/cli": "~13.2.2",
     "@angular/compiler-cli": "~13.2.0",
+    "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.47",
+    "angular-unit-test-helper": "^12.0.0",
+    "cypress": "latest",
     "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.7.0",
     "typescript": "~4.5.2"
   }
 }
