--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.6",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.2.6",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
@@ -30,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.2",
-    "@angular/cli": "~13.2.2",
+    "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "~13.2.0",
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.10.0",
