ch6-adding-search

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cypress:run": "cypress run",
     "build:prod": "ng build --prod",
     "prenow:publish": "npm run build:prod",
-    "now:publish": "now --platform-version 2 dist/local-weather-app"
+    "now:publish": "now --platform-version 2 dist/local-weather-app",
+    "test:a11y": "pa11y --standard Section508 http://localhost:5000"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +41,7 @@
     "@types/node": "^12.20.47",
     "angular-unit-test-helper": "^12.0.0",
     "cypress": "latest",
+    "http-server": "^14.1.0",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.3.0",
@@ -47,6 +49,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "pa11y": "^6.1.1",
+    "pa11y-ci": "^3.0.1",
     "protractor": "^7.0.0",
     "ts-node": "^10.7.0",
     "typescript": "~4.5.2"
